@@ -1,3 +1,11 @@
+2004-04-04  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerb_file.[hc], src/drill.c, src/amacro.c, gerber.c:
+	  Changed gerb_fgetint() so it can return number of parsed characters.
+	  This is useful when parsing coordinates in omit trailing zeros mode.
+	  Omit trailing zeros is also handled properly now. Reported by Joachim
+	  Jansen and filed as bug #918344.
+	
 2004-02-24  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerbv.c: Apperently under GTK2 both delete_event and destroy
